mobile view header and dark mode button fix

--- a/style.css
+++ b/style.css
@@ -462,6 +462,10 @@ input[type="date"]:before {
     width: 90%;
     margin: 0 auto;
   }
+  header {
+    margin: 1.5rem 0px;
+    font-size: 2rem;
+  }
   .container {
     height: 85%;
   }
@@ -470,5 +474,8 @@ input[type="date"]:before {
   }
   .max-height {
     height: 90%;
+  }
+  .label {
+    transform: scale(0.9);
   }
 }
